style: Format code
Signed-off-by: IfGuestInDream <ifGuestInDream@163.com>